fix query for platform